# headband

./: .gitignore  .pre-commit-config.yaml  README.md  bootstrap.sh  pyproject.toml  run.sh  test_tts.py
.claude/: CLAUDE.md  settings.json
src/headband/: __init__.py  __main__.py  audio.py  claude.py  leds.py  memory.py  stt.py
tests/: __init__.py
