[project]
name = "headband"
version = "0.1.0"
description = "Magic headband: Claude AI + bone-conduction audio + LED noodles on Raspberry Pi"
readme = "README.md"
license = "AGPL-3.0-or-later"
requires-python = ">=3.13"
dependencies = [
    "anthropic>=0.40",
    "numpy>=2.0",
    "piper-tts>=1.2",
    "silero-vad>=5.1",
    "sounddevice>=0.5",
    "vosk>=0.3",
]

[project.scripts]
headband = "headband:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/headband"]

[dependency-groups]
dev = [
    "pre-commit>=4.0",
    "pyright>=1.1",
    "pytest>=8.0",
    "ruff>=0.8",
]

[tool.ruff]
target-version = "py313"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "UP",     # pyupgrade
    "B",      # flake8-bugbear
    "SIM",    # flake8-simplify
    "RUF",    # ruff-specific
]

[tool.pyright]
pythonVersion = "3.13"
typeCheckingMode = "strict"
include = ["src"]
